Initial personal commit Jan 4

--- a/Ross Marathons - Webscraping.ipynb
+++ b/Ross Marathons - Webscraping.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python Marathons Project: Webscraping & Analysis\n",
+    "\n",
+    "## This is Part I: I'm going to scrape the marathon data of the past four years and save it to a CSV. Part 2 will include all analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -110,13 +119,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,16 +172,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Overall</th>\n",
+       "      <th>Bib</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>30001</td>\n",
+       "      <td>Travis Peruski</td>\n",
+       "      <td>01:37:54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Scott Wietecha</td>\n",
+       "      <td>02:34:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Jordan Wilson</td>\n",
+       "      <td>02:35:24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>30034</td>\n",
+       "      <td>Steelton Flynn</td>\n",
+       "      <td>02:39:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>30035</td>\n",
+       "      <td>Thomas Ellis</td>\n",
+       "      <td>02:42:09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Overall    Bib            Name      Time\n",
+       "0       1  30001  Travis Peruski  01:37:54\n",
+       "1       2      1  Scott Wietecha  02:34:59\n",
+       "2       3      4   Jordan Wilson  02:35:24\n",
+       "3       4  30034  Steelton Flynn  02:39:59\n",
+       "4       5  30035    Thomas Ellis  02:42:09"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "marathon2019_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,35 +273,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BeautifulSoup\t HTML\t Request\t df\t display\t half2016_df\t half2017_df\t half2018_df\t half2019_df\t \n",
+      "i\t marathon2016_df\t marathon2017_df\t marathon2018_df\t marathon2019_df\t marathon_scraper\t pages_2016\t pages_2017\t pages_2018\t \n",
+      "pages_2019\t pd\t pgs_half_2016\t pgs_half_2017\t pgs_half_2018\t pgs_half_2019\t requests\t result\t results_list\t \n",
+      "soup\t tables\t url\t urlbase_2016\t urlbase_2017\t urlbase_2018\t urlbase_2019\t urlbase_half_2016\t urlbase_half_2017\t \n",
+      "urlbase_half_2018\t urlbase_half_2019\t urlopen\t \n"
+     ]
+    }
+   ],
    "source": [
     "%who"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# I'm reserving this code about the table classes- I might need this later\n",
-    "\n",
-    "\n",
-    "#<table class=\"table table-responsive table-bordered\">\n",
-    "#<tr>\n",
-    "#<th class=\"table-place\">Overall</th>\n",
-    "#<th class=\"table-place\">Bib</th>\n",
-    "#<th class=\"table-name\">Name</th>\n",
-    "#<th class=\"table-time\">Time</th>"
    ]
   },
   {
@@ -230,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -303,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -357,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,16 +464,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Overall</th>\n",
+       "      <th>Bib</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>14935</td>\n",
+       "      <td>8337</td>\n",
+       "      <td>Kayleah Maddock</td>\n",
+       "      <td>06:04:28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>14937</td>\n",
+       "      <td>32614</td>\n",
+       "      <td>Kim Donaldson</td>\n",
+       "      <td>06:05:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>14938</td>\n",
+       "      <td>31720</td>\n",
+       "      <td>Pamela Samuel Hagens</td>\n",
+       "      <td>06:12:15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14939</td>\n",
+       "      <td>33664</td>\n",
+       "      <td>Fatima Rego</td>\n",
+       "      <td>06:12:24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14940</td>\n",
+       "      <td>33532</td>\n",
+       "      <td>Annie Friar</td>\n",
+       "      <td>06:26:37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Overall    Bib                  Name      Time\n",
+       "10   14935   8337       Kayleah Maddock  06:04:28\n",
+       "11   14937  32614         Kim Donaldson  06:05:35\n",
+       "12   14938  31720  Pamela Samuel Hagens  06:12:15\n",
+       "13   14939  33664           Fatima Rego  06:12:24\n",
+       "14   14940  33532           Annie Friar  06:26:37"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "half2018_df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,33 +580,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Overall</th>\n",
+       "      <th>Bib</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Nick French</td>\n",
+       "      <td>01:10:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Ian Bordelon</td>\n",
+       "      <td>01:12:15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Chris Demetra</td>\n",
+       "      <td>01:12:52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1025</td>\n",
+       "      <td>Grayson Reid</td>\n",
+       "      <td>01:15:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Jason Vincze</td>\n",
+       "      <td>01:17:01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Overall   Bib           Name      Time\n",
+       "0       1    31    Nick French  01:10:03\n",
+       "1       2    33   Ian Bordelon  01:12:15\n",
+       "2       3    32  Chris Demetra  01:12:52\n",
+       "3       4  1025   Grayson Reid  01:15:10\n",
+       "4       5    34   Jason Vincze  01:17:01"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "half2019_df.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# This is the end of this notebook. Everything is functional, and I'm going to do my analysis in the other notebook."
+   ]
   },
   {
    "cell_type": "code",
